[project]
name = "miiii"
version = "0.0.1"
description = "Mechanistic interpretability of irriducible integer identifiers"
authors = [{ name = "Noah Syrkis", email = "desk@syrkis.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "oeis>=2023.3.10,<2024",
    "tqdm>=4.66.4,<5",
    "requests>=2.32.2,<3",
    "einops>=0.8.0,<0.9",
    "matplotlib>=3.9.0,<4",
    "pyyaml>=6.0.1,<7",
    "jupyterlab>=4.2.2,<5",
    "optax>=0.2.3,<0.3",
    "jax-tqdm>=0.2.2,<0.3",
    "ipywidgets>=8.1.5,<9",
    "aim>=3.25.0,<4",
    "python-dotenv>=1.0.1,<2",
    "optuna>=4.1.0,<5",
    "jaxtyping>=0.2.36,<0.3",
    "equinox>=0.11.11,<0.12",
    "jax>=0.6.0,<0.7",
    "tsnex>=0.0.3",
    "dire-jax>=0.1.0",
    "debugpy>=1.8.14",
    "ipykernel>=6.29.5",
    "mlxp>=1.0.4",
    "lovely-jax>=0.1.3",
    "datasets>=4.0.0",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = ["esch"]

[tool.uv]

[tool.uv.sources]
esch = { path = "../esch" }

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
