[project]
name = "miiii"
version = "0.0.1"
description = "Mechanistic interpretability of irriducible integer identifiers"
authors = [{ name = "Noah Syrkis", email = "desk@syrkis.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "oeis>=2023.3.10,<2024",
    "einops>=0.8.0,<0.9",
    "jax-tqdm>=0.2.2,<0.3",
    "python-dotenv>=1.0.1,<2",
    "jaxtyping>=0.2.36,<0.3",
    "ipykernel>=6.29.5",
    "mlxp>=1.0.4",
    "lovely-jax>=0.1.3",
    "scikit-learn>=1.7.0",
    "optax>=0.2.5",
    "jax>=0.6.2; sys_platform != 'linux'",
    "jax[cuda12]>=0.6.2; sys_platform == 'linux'",
    "equinox>=0.13.0",
    "jax>=0.6,<0.7",
]

[dependency-groups]
dev = ["esch"]

[tool.uv]

[tool.uv.sources]
esch = { path = "../esch" }

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
