[project]
name = "miiii"
version = "0.0.1"
description = "Mechanistic interpretability of irriducible integer identifiers"
authors = [{ name = "Noah Syrkis", email = "desk@syrkis.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "oeis>=2023.3.10,<2024",
    "ipykernel>=6.29.5",
    "mlxp>=1.0.4",
    "jupyterlab>=4.4.5",
    "ipywidgets>=8.1.7",
    "einops>=0.8.1",
    "optax>=0.2.6",
    "jax<0.7",
    "equinox>=0.13.0",
    "jaxtyping>=0.3.2",
    "jax-tqdm>=0.4.0",
]

# [dependency-groups]
# dev = ["esch"]

[tool.uv]

# [tool.uv.sources]
# esch = { path = "../esch" }

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
